# metocean-ml

./: pyproject.toml
.github/workflows/: test.yml
docs/source/: conf.py  index.rst  metocean_ml.rst  modules.rst  tests.rst
examples/: example_fetch_laws.py
metocean_ml/: dataset.py  evaluation.py  examples.py  geospatial.py  kc92.py  models.py  physics.py  spectra_tools.py  trainer.py
tests/: test_ml.py
tests/data/: NORAC_vartdalsfjorden.nc
