[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "metocean-ml"
version = "0.0.1"
description = "metocean-ml - machine learning tool for metocean data"
authors = [
    {name = "Konstantinos Christakos MET Norway & NTNU"},
    {name = "Erik Furevik MET Norway", email = "erik.r.furevik@met.no"},
]
maintainers = [ 
    {name = "Erik Furevik, MET Norway", email = "erik.r.furevik@met.no"}
]
license = {text = "GPLv3"}
dependencies = [
    "matplotlib",
    "scipy",
    "numpy",
    "xarray",
    "torch",
    "pandas",
    "scikit-learn",
    "tqdm",
    "shapely",
    "pyproj",
    "contextily",
    "geopandas"
]
requires-python = ">=3.9"

[project.optional-dependencies]
dev = [
    "pytest","sphinx>6"
]